syntax = "proto3";

package sendsvc;
option go_package="./sendsvc";


message Tpl {
  string id = 1;
  string tpl_name = 2;
  string tpl_content  = 3;
  string tpl_type = 4;
  int64 sign_id = 5;
  int64 account_id  = 6;
  int64 status = 7;
  string  remark  = 8;
  int64 created_at  = 9;
  int64 updated_at  = 10;
}

message GetTplByIdReq {
  string id = 1;
}
message GetTplByIdResp {
  Tpl item = 1;
  string err = 2;
}
message CreateTplReq {
  int64 sign_id = 1;
  int64 account_id = 2;
  string  content = 3;
}
message CreateTplResp {
  string tpl_id = 1;
  string  err = 2;
}
message TplListReq {
  int64 account_id = 1;
  int64 status = 2;
  string  tpl_content = 3;
  int64 created_lt = 4;
  int64 created_gt = 5;
  int64 page =  7;
  int64 page_size = 8;
  string  signature  = 9;
}
message TplListResp {
  repeated Tpl list = 1;
  int64 total = 2;
}
message UpdateTplReq {
  string  tpl_id = 1;
  int64 sign_id = 2;
  string  tpl_content = 3;
}
message UpdateTplResp {
  string  tpl_id = 1;
  string  err = 2;
}
message DeleteTplReq {
  string  tpl_id = 1;
}
message DeletTplResp {
  string err = 1;
}

service TplSvc {
  rpc GetTplById(GetTplByIdReq) returns(GetTplByIdResp);
  rpc CreateTpl(CreateTplReq) returns(CreateTplResp);
  rpc UpdateTpl(UpdateTplReq) returns(UpdateTplResp);
  rpc DeleteTpl(DeleteTplReq) returns(DeletTplResp);
  rpc TplList(TplListReq) returns(TplListResp);
}

message Sign {
  int64 id = 1;
  string signature =  2;
  int64 is_default  = 3;
  int64 status = 4;
  int64 created_at  = 5;
  int64 updated_at  = 6;
}

message GetSigByIdReq {
  int64 id = 1;
}
message GetSigByIdResp {
  Sign item = 1;
  string err = 2;
}

message CreateSigReq {
  int64 account_id  = 1;
  int64 is_default  = 2;
  string  signature = 3;
}
message CreateSigResp {
  int64 id  = 1;
}

message SigListReq {
  int64 account_id = 1;
  int64 status = 2;
  string  signature  = 3;
  int64 created_lt = 4;
  int64 created_gt = 5;
  int64 page =  7;
  int64 page_size = 8;
  int64 is_default = 9;
}
message SigListResp {
  repeated Sign list = 1;
  int64 total = 2;
}
message UpdateSigReq{}
message UpdateSigResp{}
message DeleteSigReq{}
message DeleteSigResp{}

service TplSignSvc {
  rpc GetSigById(GetSigByIdReq) returns(GetSigByIdResp);
  rpc CreateSig(CreateSigReq) returns(CreateSigResp);
  rpc UpdateSig(UpdateSigReq) returns(UpdateSigResp);
  rpc DeleteSig(DeleteSigReq) returns(DeleteSigResp);
  rpc SigList(SigListReq) returns(SigListResp);
}

message Rec {
  int64 id = 1;
  string  mobile  = 2;
  string  nationcode  = 3;
  int64 app_id  = 4;
  string  template_type = 5;
  string tpl_id = 6;
  string  tpl_param = 7;
  string  send_at = 8;
  int64 send_status = 9;
  string  sender_ip = 10;
  int64 created_at  = 11;
  int64 updated_at  = 12;
}

message CreateRecReq {
  string mobile = 1;
}
message CreateRecResp {
  int64 id  = 1;
}
message GetRecByIdReq {
  int64 id = 1;
}
message GetRecByIdResp {
  Rec item = 1;
  string  err = 2;
}
service TplSendSvc {
  rpc CreateRec(CreateRecReq) returns(CreateRecResp);
  rpc GetRecById(GetRecByIdReq) returns(GetRecByIdResp);
}